--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -63,6 +63,7 @@
     "express": "^4.18.0",
     "express-session": "^1.17.3",
     "generic-filehandle": "^3.0.0",
+    "https-proxy-agent": "^7.0.6",
     "joi": "^17.7.0",
     "material-ui-popup-state": "^5.0.4",
     "mobx": "^6.6.1",
