Remove references to gff_id

--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
   },
   "include": ["./src"],
+  "references": [{ "path": "../apollo-mst" }, { "path": "../apollo-shared" }],
   "ts-node": {
     "esm": true,
   },
