--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Start apollo
         run: |
           yarn --cwd packages/apollo-shared start &
-          ALLOW_ROOT_USER=true ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-collaboration-server start &
+          yarn --cwd packages/apollo-collaboration-server test:cli:start &
       - name: Run CLI tests
         run: yarn test:cli
         working-directory: packages/apollo-cli
