Lots of dependency upgrades

--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@apollo-annotation/schemas": "workspace:^",
-    "@jbrowse/core": "^3.6.5",
+    "@jbrowse/core": "^4.1.1",
     "bson-objectid": "^2.0.4",
     "tslib": "^2.3.1"
   },
@@ -27,16 +27,14 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@mui/material": "^7.0.0",
-    "@mui/x-data-grid": "^8.0.0",
-    "mobx": "^6.6.1",
-    "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.26.0",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
+    "react": ">=18.0.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^7.4.0",
-    "tss-react": "^4.6.1"
+    "rxjs": "^7.8.2"
   },
   "publishConfig": {
     "access": "public"
