--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -45,8 +45,9 @@
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^2.0.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^3.6.5",
-    "@mui/material": "^7.0.0",
+    "@jbrowse/core": "^4.1.1",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
     "@nestjs/common": "^10.1.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.0",
@@ -66,9 +67,8 @@
     "https-proxy-agent": "^7.0.6",
     "joi": "^17.7.0",
     "material-ui-popup-state": "^5.0.4",
-    "mobx": "^6.6.1",
-    "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
     "mongoose": "^6.12.0",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^1.4.5-lts.1",
@@ -78,16 +78,14 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-microsoft": "^1.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": ">=18.0.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.8.2",
     "sanitize-filename": "^1.6.3",
     "socket.io": "^4.5.3",
     "stream-concat": "^1.0.0",
-    "tslib": "^2.3.1",
-    "tss-react": "^4.6.1"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@apollo-annotation/mst": "workspace:^",
