--- a/packages/apollo-collaboration-server/tsconfig.json
+++ b/packages/apollo-collaboration-server/tsconfig.json
@@ -17,6 +17,7 @@
   },
   "references": [
     { "path": "../apollo-common" },
+    { "path": "../apollo-mst" },
     { "path": "../apollo-schemas" },
     { "path": "../apollo-shared" },
   ],
