--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -15,13 +15,14 @@
     "@apollo-annotation/schemas": "workspace:^",
     "@gmod/gff": "^2.0.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^3.6.5",
+    "@jbrowse/core": "^4.1.1",
     "bson-objectid": "^2.0.4",
     "generic-filehandle": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@jbrowse/mobx-state-tree": "^5.5.0",
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
     "@types/chai": "^4.3.19",
@@ -29,25 +30,23 @@
     "chai": "^5.1.1",
     "chai-exclude": "^3.0.0",
     "glob": "^11.0.0",
-    "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.4.0",
+    "mobx": "^6.15.0",
     "mongoose": "^6.12.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.8.2",
     "tsx": "^4.6.2",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@mui/material": "^7.0.0",
-    "@mui/x-data-grid": "^8.0.0",
-    "mobx": "^6.6.1",
-    "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.26.0",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
+    "react": ">=18.0.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.8.2"
   },
   "publishConfig": {
     "access": "public"
