--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -13,6 +13,7 @@
   },
   "license": "Apache-2.0",
   "author": "JBrowse Team",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -54,8 +55,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^2.0.0",
-    "@jbrowse/plugin-authentication": "^3.6.5",
-    "@jbrowse/plugin-linear-genome-view": "^3.6.5",
+    "@jbrowse/plugin-authentication": "^4.1.1",
+    "@jbrowse/plugin-linear-genome-view": "^4.1.1",
     "@mui/icons-material": "^6.5.0",
     "@types/jsonpath": "^0.2.0",
     "autosuggest-highlight": "^3.3.4",
@@ -71,12 +72,13 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@jbrowse/cli": "^3.6.5",
-    "@jbrowse/core": "^3.6.5",
+    "@jbrowse/cli": "^4.1.1",
+    "@jbrowse/core": "^4.1.1",
     "@jbrowse/development-tools": "^2.2.1",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
     "@jest/globals": "^29.0.3",
-    "@mui/material": "^7.0.0",
-    "@mui/x-data-grid": "^8.0.0",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.26.0",
     "@types/autosuggest-highlight": "^3",
     "@types/file-saver": "^2",
     "@types/node": "^20.19.15",
@@ -91,35 +93,30 @@
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
     "librpc-web-mod": "^1.1.9",
-    "mobx": "^6.6.1",
-    "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
+    "mobx": "^6.15.0",
+    "mobx-react": "^9.2.1",
     "npm-run-all": "^4.1.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": ">=18.0.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.2",
-    "rxjs": "^7.4.0",
+    "rollup": "^3.29.5",
+    "rxjs": "^7.8.2",
     "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.3.0",
-    "tss-react": "^4.6.1",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@jbrowse/core": "^3.0.1",
-    "@mui/material": "^7.0.0",
-    "mobx": "^6.6.1",
+    "@jbrowse/core": "^4.1.1",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
+    "mobx": "^6.15.0",
     "mobx-react": "^9.0.0",
-    "mobx-state-tree": "^5.4.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": ">=18.0.0",
     "react-dom": "^18.2.0",
-    "rxjs": "^7.4.0",
-    "tss-react": "^4.6.1"
+    "rxjs": "^7.8.2"
   },
   "publishConfig": {
     "access": "public"
