--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -57,7 +57,7 @@
     "@gmod/gff": "^2.0.0",
     "@jbrowse/plugin-authentication": "^4.1.1",
     "@jbrowse/plugin-linear-genome-view": "^4.1.1",
-    "@mui/icons-material": "^6.5.0",
+    "@mui/icons-material": "^7.3.7",
     "@types/jsonpath": "^0.2.0",
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.4",
@@ -96,8 +96,8 @@
     "mobx": "^6.15.0",
     "mobx-react": "^9.2.1",
     "npm-run-all": "^4.1.5",
-    "react": ">=18.0.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.29.5",
     "rxjs": "^7.8.2",
