--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -32,8 +32,8 @@
     "@mui/x-data-grid": "^8.26.0",
     "mobx": "^6.15.0",
     "mobx-react": "^9.2.1",
-    "react": ">=18.0.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rxjs": "^7.8.2"
   },
   "publishConfig": {
