--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -19,8 +19,8 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^2.3.0",
-    "react": ">=18.0.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.5.2",
