Get Jest tests working, remove unused tests

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -25,10 +25,8 @@
     "prepack": "yarn build && oclif manifest && oclif readme && prettier --write README.md",
     "postpack": "shx rm -f oclif.manifest.json",
     "prepare": "yarn build",
-    "test": "mocha --require src/test/fixtures.ts 'src/**/*.test.ts'",
-    "posttest": "yarn lint",
-    "test:ci": "nyc mocha 'src/**/*.test.ts'",
-    "test:cli": "yarn tsx src/test/test.ts",
+    "test": "yarn tsx src/test/test.ts",
+    "test:ci": "yarn tsx src/test/test.ts",
     "version": "oclif readme --multi --dir ../website/docs/03-guides/04-cli/ && oclif readme && git add README.md"
   },
   "oclif": {
@@ -97,11 +95,9 @@
     "@types/cli-progress": "^3",
     "@types/cross-spawn": "^6.0.6",
     "@types/inquirer": "^9.0.7",
-    "@types/mocha": "^10",
     "@types/node": "^24.10.9",
     "babel-plugin-istanbul": "^6.1.1",
     "cross-spawn": "^7.0.3",
-    "mocha": "^10.2.0",
     "mongodb": "^4.7.0",
     "nyc": "^15.1.0",
     "oclif": "^4.4.2",
