--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -26,8 +26,8 @@
     "start:server": "serve --no-request-logging --cors --listen 9000 --no-port-switching .",
     "build": "yarn build:shared && yarn clean && rollup --config rollup/rollup.config.mjs",
     "browse": "serve --no-request-logging --listen 8999 --no-port-switching --symlinks .jbrowse",
-    "test": "jest",
-    "test:ci": "jest --coverage",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test:ci": "yarn node --experimental-vm-modules $(yarn bin jest) --coverage",
     "start:collab-cypress": "yarn workspace @apollo-annotation/collaboration-server run cypress:start",
     "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
     "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
@@ -54,7 +54,7 @@
     "@gmod/gff": "^2.0.0",
     "@jbrowse/plugin-authentication": "^4.1.1",
     "@jbrowse/plugin-linear-genome-view": "^4.1.1",
-    "@mui/icons-material": "^6.5.0",
+    "@mui/icons-material": "^7.3.7",
     "@types/jsonpath": "^0.2.0",
     "autosuggest-highlight": "^3.3.4",
     "bson-objectid": "^2.0.4",
@@ -108,6 +108,7 @@
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-util": "^30.2.0",
     "librpc-web-mod": "^1.1.9",
     "lodash.merge": "^4.6.2",
     "mobx": "^6.6.1",
@@ -126,7 +127,7 @@
     "serve": "^14.0.1",
     "shx": "^0.3.3",
     "start-server-and-test": "^1.11.7",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.3.0",
     "tss-react": "^4.6.1",
     "typescript": "^5.5.3"
