Remove unused and disable broken tests

--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@apollo-annotation/shared",
   "version": "0.3.11",
+  "type": "module",
   "main": "./dist/index.js",
   "scripts": {
     "build": "yarn clean && tsc --build",
