--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,8 +21,6 @@ jobs:
         run: yarn --immutable
       - name: Lint codebase
         run: yarn eslint --max-warnings 0
-      - name: Run Jest tests
-        run: yarn test
       - name: Get latest JBrowse
         run: yarn run jbrowse create --nightly .jbrowse
         working-directory: packages/jbrowse-plugin-apollo
@@ -42,9 +40,8 @@ jobs:
         run: |
           yarn --cwd packages/apollo-shared start &
           yarn --cwd packages/apollo-collaboration-server test:cli:start &
-      - name: Run CLI tests
-        run: yarn test:cli
-        working-directory: packages/apollo-cli
+      - name: Run tests
+        run: yarn test
       # - name: Run docker tests
       #   working-directory: packages/apollo-cli
       #   run: python3 ./src/test/test_docker.py
