Get Jest tests working again

--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -5,9 +5,9 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "module": "CommonJS",
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
   },
   "include": ["./src"],
