--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -29,7 +29,8 @@
     "start:server": "serve --no-request-logging --cors --listen 9000 --no-port-switching .",
     "build": "yarn build:shared && yarn clean && rollup --config",
     "browse": "serve --no-request-logging --listen 8999 --no-port-switching --symlinks .jbrowse",
-    "test": "jest",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test:ci": "yarn node --experimental-vm-modules $(yarn bin jest) --coverage",
     "start:collab-cypress": "yarn workspace @apollo-annotation/collaboration-server run cypress:start",
     "test:e2e": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:run\"",
     "test:e2e:debug": "yarn build && start-test \"npm-run-all --parallel start:server browse start:collab-cypress\" \"9000|8999|http://localhost:3999/health\" \"npm-run-all cypress:debug\"",
@@ -91,6 +92,7 @@
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-util": "^30.2.0",
     "librpc-web-mod": "^1.1.9",
     "mobx": "^6.15.0",
     "mobx-react": "^9.2.1",
