--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,21 @@ jobs:
         run: yarn --immutable
       - name: Lint codebase
         run: yarn eslint --max-warnings 0
+
+      # apollo-shared tests
+      - name: Build shared
+        run: yarn build
+        working-directory: packages/apollo-shared
+      - name: Run apollo-shared tests
+        run: yarn run test:ci
+        working-directory: packages/apollo-shared
+
+      # jbrowse-plugin-apollo tests
+      - name: Run jbrowse-plugin-apollo tests
+        run: yarn run test:ci
+        working-directory: packages/jbrowse-plugin-apollo
+
+      # Cypress tests
       - name: Get latest JBrowse
         run: yarn run jbrowse create --nightly .jbrowse
         working-directory: packages/jbrowse-plugin-apollo
@@ -36,12 +51,16 @@ jobs:
       - name: Run Cypress tests
         run: yarn run test:e2e
         working-directory: packages/jbrowse-plugin-apollo
+
+      # CLI tests
       - name: Start apollo
         run: |
           yarn --cwd packages/apollo-shared start &
           yarn --cwd packages/apollo-collaboration-server test:cli:start &
-      - name: Run tests
-        run: yarn test
+      - name: Run CLI tests
+        run: yarn run test:ci
+        working-directory: packages/apollo-cli
+
       # - name: Run docker tests
       #   working-directory: packages/apollo-cli
       #   run: python3 ./src/test/test_docker.py
