--- a/packages/apollo-common/tsconfig.json
+++ b/packages/apollo-common/tsconfig.json
@@ -5,9 +5,9 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2019",
-    "lib": ["ES2019", "DOM"],
-    "module": "CommonJS",
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "module": "ESNext",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
