--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "apollo3",
   "private": true,
   "description": "Monorepo containing Apollo front and back end code",
+  "type": "module",
   "workspaces": [
     "packages/*"
   ],
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/cross-spawn": "^6.0.6",
-    "@types/node": "^20.19.15",
+    "@types/node": "^24.10.9",
     "@types/semver": "^7",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/parser": "^8.25.0",
