--- a/packages/apollo-mst/tsconfig.json
+++ b/packages/apollo-mst/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig-base.json",
+  "extends": "../../tsconfig",
   "compilerOptions": {
     "composite": true,
     "incremental": true,
