--- a/packages/apollo-mst/package.json
+++ b/packages/apollo-mst/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@apollo-annotation/mst",
   "version": "0.3.11",
-  "main": "./dist/index.js",
+  "type": "module",
+  "exports": "./dist/index.js",
   "scripts": {
     "build": "tsc"
   },
