Convert apollo-common to esm

--- a/packages/apollo-common/tsconfig.json
+++ b/packages/apollo-common/tsconfig.json
@@ -5,13 +5,10 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2019",
-    "lib": ["ES2019", "DOM"],
-    "module": "CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false,
+    // For nodejs:
+    "lib": ["esnext"],
+    "types": ["node"],
   },
   "include": ["./src"],
   "references": [{ "path": "../apollo-schemas" }, { "path": "../apollo-mst" }],
