--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -6,13 +6,14 @@
     "url": "https://github.com/GMOD/Apollo3.git",
     "directory": "packages/apollo-common"
   },
-  "main": "./dist/index.js",
+  "type": "module",
+  "exports": "./dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --build"
   },
   "dependencies": {
     "@apollo-annotation/schemas": "workspace:^",
-    "@jbrowse/core": "^3.6.5",
+    "@jbrowse/core": "^4.1.1",
     "bson-objectid": "^2.0.4",
     "tslib": "^2.3.1"
   },
