--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@apollo-annotation/shared",
   "version": "0.3.11",
-  "main": "./dist/index.js",
+  "type": "module",
+  "exports": "./dist/index.js",
   "scripts": {
     "build": "yarn clean && tsc --build",
     "clean": "rimraf dist",
