--- a/packages/apollo-shared/tsconfig.json
+++ b/packages/apollo-shared/tsconfig.json
@@ -5,10 +5,12 @@
     "incremental": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "module": "CommonJS",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+    // TODO: enable this and fix the problems it reveals
+    "noUncheckedIndexedAccess": false,
+    // For nodejs:
+    "lib": ["esnext"],
+    "types": ["node"],
   },
   "include": ["./src"],
   "references": [
