--- a/packages/apollo-cli/tsconfig.json
+++ b/packages/apollo-cli/tsconfig.json
@@ -1,13 +1,12 @@
 {
+  "extends": "../../tsconfig",
   "compilerOptions": {
-    "declaration": true,
-    "module": "Node16",
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
-    "target": "es2022",
-    "moduleResolution": "node16",
-    "skipLibCheck": true,
+    // For Node.js >=20: https://github.com/microsoft/TypeScript/wiki/Node-Target-Mapping
+    "target": "es2023",
+    "lib": ["es2023"],
+    "types": ["node"],
   },
   "include": ["./src"],
   "references": [{ "path": "../apollo-mst" }, { "path": "../apollo-shared" }],
