Mark internal packages free from side effects

--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/GMOD/Apollo3.git",
     "directory": "packages/apollo-common"
   },
+  "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
   "scripts": {
