--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -13,9 +13,7 @@
   },
   "license": "Apache-2.0",
   "author": "JBrowse Team",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist",
     "src"
@@ -71,18 +69,37 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.28.6",
     "@jbrowse/cli": "^3.6.5",
     "@jbrowse/core": "^4.1.1",
     "@jbrowse/development-tools": "^2.2.1",
     "@jest/globals": "^29.0.3",
     "@mui/material": "^7.0.0",
     "@mui/x-data-grid": "^8.0.0",
+    "@rollup/plugin-babel": "^6.1.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-typescript": "^12.3.0",
     "@types/autosuggest-highlight": "^3",
+    "@types/babel-plugin-macros": "^3",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/file-saver": "^2",
+    "@types/lodash.merge": "^4",
     "@types/node": "^24.10.9",
     "@types/prop-types": "^15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18",
+    "babel-plugin-annotate-pure-calls": "^0.5.0",
+    "babel-plugin-dev-expression": "^0.2.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-polyfill-regenerator": "^0.6.6",
+    "babel-plugin-transform-rename-import": "^2.3.0",
+    "builtin-modules": "^5.0.0",
+    "chalk": "^5.6.2",
     "cypress": "12.17.3",
     "cypress-image-diff-html-report": "^2.2.0",
     "cypress-image-diff-js": "^2.3.0",
@@ -91,6 +108,7 @@
     "jest": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
     "librpc-web-mod": "^1.1.9",
+    "lodash.merge": "^4.6.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.4.0",
@@ -99,7 +117,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.2",
+    "rollup": "^4.57.0",
+    "rollup-plugin-external-globals": "^0.13.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
     "rxjs": "^7.4.0",
     "serve": "^14.0.1",
     "shx": "^0.3.3",
