--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "isolatedModules": true,
     // TODO: enable this one TypeScript version is updated
     // "noUncheckedSideEffectImports": true,
