Dep updates and various fixes

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -47,7 +47,8 @@
     "@gmod/gff": "^2.0.0",
     "@gmod/indexedfasta": "^2.0.4",
     "@jbrowse/core": "^4.1.1",
-    "@mui/material": "^7.0.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
     "@nestjs/common": "^10.1.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.0",
@@ -69,7 +70,6 @@
     "material-ui-popup-state": "^5.0.4",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
     "mongoose": "^6.12.0",
     "mongoose-id-validator": "^0.6.0",
     "multer": "^2.0.2",
