--- a/packages/apollo-mst/package.json
+++ b/packages/apollo-mst/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@jbrowse/core": "^4.1.1",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
     "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.4.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1"
