--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -22,9 +22,9 @@
     "setup": "rimraf .jbrowse && jbrowse create .jbrowse",
     "clean": "rimraf dist",
     "start": "yarn clean && npm-run-all --parallel start:watch start:server",
-    "start:watch": "JB_NPM=false NODE_ENV=development rollup --config --watch",
+    "start:watch": "JB_NPM=false NODE_ENV=development rollup --config rollup/rollup.config.mjs --watch",
     "start:server": "serve --no-request-logging --cors --listen 9000 --no-port-switching .",
-    "build": "yarn build:shared && yarn clean && rollup --config",
+    "build": "yarn build:shared && yarn clean && rollup --config rollup/rollup.config.mjs",
     "browse": "serve --no-request-logging --listen 8999 --no-port-switching --symlinks .jbrowse",
     "test": "jest",
     "test:ci": "jest --coverage",
@@ -52,8 +52,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "^2.0.0",
-    "@jbrowse/plugin-authentication": "^3.6.5",
-    "@jbrowse/plugin-linear-genome-view": "^3.6.5",
+    "@jbrowse/plugin-authentication": "^4.1.1",
+    "@jbrowse/plugin-linear-genome-view": "^4.1.1",
     "@mui/icons-material": "^6.5.0",
     "@types/jsonpath": "^0.2.0",
     "autosuggest-highlight": "^3.3.4",
@@ -72,11 +72,12 @@
     "@babel/core": "^7.28.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.28.6",
-    "@jbrowse/cli": "^3.6.5",
+    "@jbrowse/cli": "^4.1.1",
     "@jbrowse/core": "^4.1.1",
     "@jbrowse/development-tools": "^2.2.1",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
     "@jest/globals": "^29.0.3",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.0.0",
     "@rollup/plugin-babel": "^6.1.0",
     "@rollup/plugin-commonjs": "^29.0.0",
@@ -111,7 +112,6 @@
     "lodash.merge": "^4.6.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -133,10 +133,10 @@
   },
   "peerDependencies": {
     "@jbrowse/core": "^4.1.1",
-    "@mui/material": "^7.0.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
     "mobx": "^6.6.1",
     "mobx-react": "^9.0.0",
-    "mobx-state-tree": "^5.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
