--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -29,11 +29,11 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@mui/material": "^7.0.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
