--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -24,6 +24,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@jbrowse/mobx-state-tree": "^5.5.0",
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
     "@types/chai": "^4.3.19",
@@ -32,7 +33,6 @@
     "chai-exclude": "^3.0.0",
     "glob": "^11.0.0",
     "mobx": "^6.6.1",
-    "mobx-state-tree": "^5.4.0",
     "mongoose": "^6.12.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
@@ -41,11 +41,11 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@mui/material": "^7.0.0",
+    "@jbrowse/mobx-state-tree": "^5.5.0",
+    "@mui/material": "^7.3.7",
     "@mui/x-data-grid": "^8.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.2.1",
-    "mobx-state-tree": "^5.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
