--- a/packages/jbrowse-plugin-apollo/tsconfig.json
+++ b/packages/jbrowse-plugin-apollo/tsconfig.json
@@ -6,6 +6,8 @@
     "resolveJsonModule": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    // TODO: enable this and fix the problems it reveals
+    "noUncheckedIndexedAccess": false,
   },
   "include": ["src"],
   "exclude": ["**/dist/"],
