Fix some TS errors

--- a/packages/jbrowse-plugin-apollo/.gitignore
+++ b/packages/jbrowse-plugin-apollo/.gitignore
@@ -7,3 +7,5 @@ cypress/downloads
 cypress/cypress-image-diff-html-report
 cypress/cypress-image-diff-screenshots/comparison
 cypress/cypress-image-diff-screenshots/diff
+
+data/
